syntax = "proto3";

package proto;

option go_package = "cloudbees/proto";

import "google/protobuf/timestamp.proto";

service BlogService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost (GetPostRequest) returns (GetPostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}

message BlogPost{
  int32 post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  google.protobuf.Timestamp publication_date = 5;
  repeated string tags = 6;
}

message CreatePostRequest {
  BlogPost create_post_request = 1;
}

message CreatePostResponse {
  string message = 2;
  string error = 3;
}

message UpdatePostRequest{
  BlogPost update_post_request = 1;
  string mask = 2;
}

message UpdatePostResponse{
  string message = 2;
  string error = 3;
}

message GetPostRequest{
  int32 post_id = 1;
}

message GetPostResponse{
  BlogPost get_post_response = 1;
  string error = 2;
}

message DeletePostRequest{
  int32 post_id = 1;
}

message DeletePostResponse{
  string message = 1;
  string error = 2;
}

